@@ -7,13 +7,14 @@
 
 package com.newrelic.jfr.tometric;
 
-import static java.util.concurrent.TimeUnit.SECONDS;
-
 import com.newrelic.jfr.Workarounds;
 import com.newrelic.telemetry.Attributes;
 import com.newrelic.telemetry.metrics.Gauge;
 import com.newrelic.telemetry.metrics.Metric;
 import java.time.Duration;
+import java.time.temporal.ChronoUnit;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import jdk.jfr.consumer.RecordedEvent;
@@ -29,18 +30,18 @@ public class CPUThreadLoadMapper implements EventToMetric {
 
   @Override
   public List<? extends Metric> apply(RecordedEvent ev) {
-    var possibleThreadName = Workarounds.getThreadName(ev);
+    Optional<String> possibleThreadName = Workarounds.getThreadName(ev);
     if (possibleThreadName.isPresent()) {
-      var threadName = possibleThreadName.get();
-      var timestamp = ev.getStartTime().toEpochMilli();
-      var attr = new Attributes().put("thread.name", threadName);
+      String threadName = possibleThreadName.get();
+      long timestamp = ev.getStartTime().toEpochMilli();
+      Attributes attr = new Attributes().put("thread.name", threadName);
 
       // Do we need to throttle these events somehow? Or just send everything?
-      return List.of(
+      return Arrays.asList(
           new Gauge("jfr.ThreadCPULoad.user", ev.getDouble("user"), timestamp, attr),
           new Gauge("jfr.ThreadCPULoad.system", ev.getDouble("system"), timestamp, attr));
     }
-    return List.of();
+    return Collections.emptyList();
   }
 
   @Override
@@ -50,6 +51,6 @@ public class CPUThreadLoadMapper implements EventToMetric {
 
   @Override
   public Optional<Duration> getPollingDuration() {
-    return Optional.of(Duration.of(1, SECONDS.toChronoUnit()));
+    return Optional.of(Duration.of(1, ChronoUnit.SECONDS));
   }
 }
