@@ -10,6 +10,7 @@ package com.newrelic.jfr.tometric;
 import com.newrelic.telemetry.Attributes;
 import com.newrelic.telemetry.metrics.Gauge;
 import com.newrelic.telemetry.metrics.Metric;
+import java.util.Arrays;
 import java.util.List;
 import jdk.jfr.consumer.RecordedEvent;
 import jdk.jfr.consumer.RecordedObject;
@@ -19,20 +20,20 @@ public class GCHeapSummaryMapper implements EventToMetric {
 
   @Override
   public List<? extends Metric> apply(RecordedEvent ev) {
-    var timestamp = ev.getStartTime().toEpochMilli();
+    long timestamp = ev.getStartTime().toEpochMilli();
     long heapUsed = ev.getLong("heapUsed");
     RecordedObject heapSpace = ev.getValue("heapSpace");
     long committedSize = heapSpace.getLong("committedSize");
     long reservedSize = heapSpace.getLong("reservedSize");
 
-    var attr =
+    Attributes attr =
         new Attributes()
             .put("when", ev.getString("when"))
             .put("heapStart", heapSpace.getLong("start"))
             .put("committedEnd", heapSpace.getLong("committedEnd"))
             .put("reservedEnd", heapSpace.getLong("reservedEnd"));
 
-    return List.of(
+    return Arrays.asList(
         new Gauge("jfr.GCHeapSummary.heapUsed", heapUsed, timestamp, attr),
         new Gauge("jfr.GCHeapSummary.heapCommittedSize", committedSize, timestamp, attr),
         new Gauge("jfr.GCHeapSummary.reservedSize", reservedSize, timestamp, attr));
